# 4chan-tool

./: .gitignore  Cargo.toml  README.md  dummy.json  rustfmt.toml
assets/test/: benchdata.json  boards.json
bench_debug/: Cargo.toml
bench_debug/src/: lib.rs
src/: chan_data.rs  config.rs  data.rs  main.rs  net.rs  views.rs
src/views/: traits.rs
