[package]
name = "config-parser"
version = "0.1.0"
authors = ["Setadokalo <darkenchanter1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "json"]}
chrono = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"