[package]
name = "fourchan-tui"
version = "0.1.0"
authors = ["Setadokalo <darkenchanter1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "json"]}
chrono = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
cursive = {version = "0.16", default-features = false, features = ["crossterm-backend"]}
image = "0.23"
string-builder = "0.2.0"
wasmer_enumset = "1.0"
x11rb = "0.8"
# logging
log = "0.4"
simplelog = "0.10"

bench_debug = {path = "bench_debug"}
